--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,10 +6,8 @@ repos:
         entry: pylint
         language: system
         types: [python]
-        args:
+        args: 
           [
-            "-rn", # Only display messages
-            "-sn", # Do not display the score
             "--rcfile=.pylintrc", # Link to your config file
-            "--load-plugins=pylint.extensions.docparams", # Load an extension
+            "--load-plugins=pylint.extensions.docparams", # Load the docparams plugin
           ]
